Game detail page finished

--- a/public/static/locales/cs/common.json
+++ b/public/static/locales/cs/common.json
@@ -59,7 +59,11 @@
 
   "GameDetail": {
     "logInToRate": "Pro hodnocení se musíte přihlásit.",
-    "totalPlayed": "{{amountOfPlayed}} celkem",
-    "similarGames": "Podobné larpy"
+    "totalPlayed": "{{amountOfRatings}} celkem",
+    "similarGames": "Podobné larpy",
+    "comments": "Komentáře",
+    "photos": "Fotky",
+    "events": "Události",
+    "gamesOfAuthors": "Larpy autorů"
   }
 }
