- Game search box implemented - Game video added (if exists)

--- a/public/static/locales/cs/common.json
+++ b/public/static/locales/cs/common.json
@@ -63,7 +63,9 @@
     "similarGames": "Podobné larpy",
     "comments": "Komentáře",
     "photos": "Fotky",
+    "video": "Video",
     "events": "Události",
-    "gamesOfAuthors": "Larpy autorů"
+    "gamesOfAuthors": "Larpy autorů",
+    "noSearchResults": "Žádná hra nenalezena"
   }
 }
