--- a/public/static/locales/cs/common.json
+++ b/public/static/locales/cs/common.json
@@ -13,6 +13,7 @@
     "signUp": "Registrace",
     "myPage": "Moje stránka",
     "settings": "Nastavení",
+    "changePassword": "Změna hesla",
     "admin": "Administrace",
     "logOut": "Odhlásit se"
   },
@@ -74,6 +75,7 @@
   },
 
   "SignIn": {
+    "header": "Přihlášení",
     "email": "Email",
     "password": "Heslo",
     "keepLoggedIn": "Trvalé přihlášení",
@@ -85,17 +87,62 @@
   "Errors": {
     "emailRequired": "Neplatná emailová adresa",
     "required": "Povinná hodnota",
-    "integerRequired": "Musíte zadat kladné celé číslo"
+    "integerRequired": "Musíte zadat kladné celé číslo",
+    "invalidDate": "Datum není platné"
   },
 
   "RecoverPassword": {
+    "header": "Zapomenuté heslo",
     "sent": "Na zadanou adresu byl odeslán email s instrukcemi pro obnovu hesla.",
     "error": "Zadaný email není evidován v databázi.",
     "email": "Zadejte email",
     "submit": "Odeslat",
     "password": "Heslo",
-    "passwordConfirmation": "Potvrzení hesla",
+    "passwordConfirmation": "Heslo znovu",
     "passwordConfirmationError": "Hesla jsou různá",
     "changeError": "Nastavení hesla nebylo úspěšné, odkaz nejspíš již není platný. Zkuste si nechat poslat nový."
+  },
+
+  "UserFields": {
+    "email": "Email",
+    "password": "Heslo",
+    "passwordAgain": "Heslo znovu",
+    "passwordAgainError": "Hesla jsou různá",
+    "profilePicture": "Váš profilový obrázek",
+    "name": "Jméno",
+    "nameHint": "Zadejte své celé jméno",
+    "nickName": "Přezdívka",
+    "nickNameHint": "Chcete-li, zadejte svoji přezdívku",
+    "city": "Město",
+    "cityHint": "Chcete-li, zadejte město, ve kterém bydlíte (studujete, pracujete, ...)",
+    "birthDate": "Datum narození",
+    "birthDateHint": "Chcete-li, zadejte své datum narození ve formátu DD.MM.YYYY"
+  },
+
+  "SignUp": {
+    "header": "Registrace",
+    "error": "Chyaba při registraci",
+    "subheader": "Vítejte na česko-slovenské larpové databázi. Po vyplnění formuláře se stanete registrovaným uživatelem a můžete tak využít všech funkcí jako hodnocení a a komentování jednotlivých larpů, stejně jako jejich zařazení do vaší larpotéky.",
+    "submit": "Registrovat",
+    "emailAlreadyUsed": "Tento e-mail je již používán uživatelem {{name}}. Pokud je účet váš, můžete si obnovit heslo na stránce",
+    "forgotPassword": "Zapomenuté heslo",
+    "profilePictureHint": "Vyberte svoji profilovou fotografii o rozměrech 120x120px. Maximální velikost fotografie jsou 2MB."
+  },
+
+  "FormFileInput": {
+    "defaultLabel": "Vybrat...",
+    "defaultPlaceholder": "Soubor není vybraný",
+    "fileTooBig": "Soubor je příliš velký"
+  },
+
+  "ReCaptchaField": {
+    "required": "Vyplňte, prosím, ověření"
+  },
+
+  "UserSettings": {
+    "heading": "Úprava informací o vás",
+    "profilePictureHint": "Vyberte svoji profilovou fotografii o rozměrech 120x120px. Maximální velikost fotografie jsou 2MB.",
+    "emailAlreadyUsed": "Tento e-mail je již používán uživatelem {{name}}.",
+    "submit": "Uložit"
   }
 }
