--- a/public/static/locales/cs/common.json
+++ b/public/static/locales/cs/common.json
@@ -59,7 +59,9 @@
     "gallery": "Galerie:",
     "photoAuthor": "Autor fotografií:",
     "authors": "Autoři:",
-    "groups": "Skupiny:"
+    "groups": "Skupiny:",
+    "ratingInList": "hodnocení",
+    "aboutGame": "o hře"
   },
 
   "GameDetail": {
@@ -140,9 +142,36 @@
   },
 
   "UserSettings": {
-    "heading": "Úprava informací o vás",
+    "header": "Úprava informací o vás",
     "profilePictureHint": "Vyberte svoji profilovou fotografii o rozměrech 120x120px. Maximální velikost fotografie jsou 2MB.",
     "emailAlreadyUsed": "Tento e-mail je již používán uživatelem {{name}}.",
     "submit": "Uložit"
+  },
+
+  "UserDetail": {
+    "player_0": "Hráč jednoho larpu",
+    "player_1": "Hráč {{count}} larpů",
+    "player_2": "Hráč {{count}} larpů",
+    "author_0": ", tvůrce jednoho larpu",
+    "author_1": ", tvůrce {{count}} larpů",
+    "author_2": ", tvůrce {{count}} larpů",
+    "age": " / {{age}} let",
+    "profile": "Profil",
+    "settings": "Nastavení",
+    "changePassword": "Změna hesla",
+    "gamesPlayed": "Hrál jsem",
+    "gamesWanted": "Chci hrát",
+    "wantedICal": "ICal s hrami, které chcete hrát"
+  },
+
+  "ChangePassword": {
+    "header": "Změna hesla",
+    "oldPassword": "Staré heslo",
+    "newPassword": "Nové heslo",
+    "newPasswordAgain": "Nové heslo znovu",
+    "passwordConfirmationError": "Hesla jsou různá",
+    "submit": "Nastavit heslo",
+    "error": "Chyba při nastavování hesla",
+    "oldPasswordError": "Staré heslo nesouhlasí"
   }
 }
