- Fix game comments refresh - Delete rating

--- a/public/static/locales/cs/common.json
+++ b/public/static/locales/cs/common.json
@@ -80,7 +80,8 @@
     "wantToPlay": "Chci hrát",
     "rate": "Vaše hodnocení je:",
     "addComment": "Přidat váš komentář",
-    "updateComment": "Upravit váš komentář"
+    "updateComment": "Upravit váš komentář",
+    "ratings": "Hodnocení"
   },
 
   "SignIn": {
