Add self ratings listing in admin

--- a/public/static/locales/cs/common.json
+++ b/public/static/locales/cs/common.json
@@ -377,7 +377,7 @@
     "tabLabels": "Štítky",
     "tabStats": "Statistiky",
     "tabSelfRating": "Sebehodnocení",
-    "intro": "Admin sekce ještě není"
+    "intro": "With great power comes great responsibility."
   },
   "GraphQLError": {
     "NETWORK": "Chyba spojení se serverem. Zkuste znovu načíst stránku.",
