Show size limit in too big file error message

--- a/public/static/locales/cs/common.json
+++ b/public/static/locales/cs/common.json
@@ -160,7 +160,7 @@
   "FormFileInput": {
     "defaultLabel": "Vybrat...",
     "defaultPlaceholder": "Soubor není vybraný",
-    "fileTooBig": "Soubor je příliš velký"
+    "fileTooBig": "Soubor je příliš velký, limit je {{limit}}"
   },
 
   "ReCaptchaField": {
