Add OG metadata to homepage

--- a/public/static/locales/cs/common.json
+++ b/public/static/locales/cs/common.json
@@ -27,6 +27,8 @@
   },
 
   "HomePage": {
+    "pageTitle": "Larpová databáze",
+    "pageDescription": "Larpy, larpový kalendář",
     "lastAddedGames": "Naposledy přidáno",
     "bestGames": "Nejoblíbenější",
     "recent": "Nedávné",
