Better OpenGraph metas

--- a/public/static/locales/cs/common.json
+++ b/public/static/locales/cs/common.json
@@ -27,8 +27,8 @@
   },
 
   "HomePage": {
-    "pageTitle": "Larpová databáze",
-    "pageDescription": "Larpy, larpový kalendář",
+    "pageTitle": "Česko-slovenská larpová databáze",
+    "pageDescription": "Všechny larpy na jednom místě. Larpová databáze.",
     "lastAddedGames": "Naposledy přidáno",
     "bestGames": "Nejoblíbenější",
     "recent": "Nedávné",
