--- a/public/static/locales/cs/common.json
+++ b/public/static/locales/cs/common.json
@@ -375,8 +375,9 @@
     "link": "Web akce",
     "eventFrom": "Od",
     "eventTo": "Do",
-    "iCalText": "Přidejte si larpový kalendář do svého pomocí odkazu:",
-    "iCalLink": "https://calendar.google.com/calendar/ical/3a28s0se1pq6qs76fpmftldsr8%40group.calendar.google.com/public/basic.ics"
+    "gCalText": "Zobrazte si larpový kalendář ve svém ",
+    "gCalUrl": "https://calendar.google.com/calendar/u/0?cid=M2EyOHMwc2UxcHE2cXM3NmZwbWZ0bGRzcjhAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ",
+    "gCalLink": "google kalendáři."
   },
   "Admin": {
     "tabIntro": "Úvod",
