Add dividers to the page

--- a/public/static/locales/cs/common.json
+++ b/public/static/locales/cs/common.json
@@ -442,10 +442,23 @@
     "example2": "Dotaz <b>na so</b> najde <b><u>Ná</u>rod <u>So</u>bě</b> a <b><u>Na</u>rutoLARP 2020: <u>So</u>umrak shinobi</b>.",
     "example3": "Dotaz <b>D L B</b> najde <b><u>D</u>e <u>l</u>a <u>B</u>ête</b>."
   },
-
   "Error": {
     "notFound": "Omlouváme se, stránka neexistuje",
     "otherError": "Omlouváme se, na stránce se vyskytla chyba (kód {{statusCode}})",
     "toHomepage": "Na domovskou stránku"
+  },
+  "Month": {
+    "0": "leden",
+    "1": "únor",
+    "2": "březen",
+    "3": "duben",
+    "4": "květen",
+    "5": "červen",
+    "6": "červenec",
+    "7": "srpen",
+    "8": "září",
+    "9": "říjen",
+    "10": "listopad",
+    "11": "prosinec"
   }
 }
