--- a/public/static/locales/cs/common.json
+++ b/public/static/locales/cs/common.json
@@ -371,6 +371,8 @@
     "optional": "Volitelné"
   },
   "EventCalendar": {
+    "pageTitle": "Larpový kalendář",
+    "pageDescription": "Všechny larpy v jednom kalendáři",
     "events": "Události",
     "link": "Web akce",
     "eventFrom": "Od",
